src/test/ui/compare-method/region-unrelated.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/region-unrelated.rs:19:5
   |
14 |     fn foo() where T: 'a;
   |     --------------------- definition of `foo` from trait
...
19 |     fn foo() where V: 'a { }
   |     ^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `V: 'a`

error: aborting due to previous error

